--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
   "scripts": {
     "build:posts": "mkdir -p pages/posts && node scripts/build-posts.mjs",
     "tailwind:watch": "npx @tailwindcss/cli -i ./styles/input.css -o ./styles/output.css --watch",
-    "tailwind": "npx @tailwindcss/cli -i ./styles/input.css -o ./styles/output.css"
+    "tailwind": "npx @tailwindcss/cli -i ./styles/input.css -o ./styles/output.css",
+    "format": "npx prettier '**/*.{html,js}' --write"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.19"
+    "@tailwindcss/typography": "^0.5.19",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
